# 42sh

./: .gitignore  CMakeLists.txt  Makefile  get_input.c  mouli.gzip  test.c  tester.sh  tests
.mouli/: norme.py  norme_auto.sh
edit_line/: Makefile  edit
edit_line/basics/: my_putstr.c  my_strlen.c
edit_line/include/: edit.h
edit_line/src/: basic_key.c  found_term.c  ini_keys.c  key_del.c  main.c
include/: alias.h  basic.h  builtins.h  edit.h  get_next_line.h  globing.h  history.h  main.h  my.h
lib/: Makefile  basic.h
lib/src/: free_.c  match.c  my_getnbr.c  my_is_prime.c  my_putchar.c  my_putnbr.c  my_putstr.c  my_strcat.c  my_strcmp.c  my_strcpy.c  my_strdup.c  my_strlen.c  my_strncat.c  my_strncmp.c  my_strstr.c  power.c  puttab_.c  sp_len_.c  sqrt.c  tabdup_.c  tablen_.c
martin/: Makefile
martin/basics/: my_free.c  my_putstr.c  my_realloc.c  my_strlen.c
martin/include/: my.h
martin/src/: found_term.c  ini_keys.c  main.c  reset_line.c  start_end.c
src/: add_and_free.c  add_char.c  add_str.c  close.c  concat_free.c  dico.c  epur.c  exit.c  free_tab.c  get_input.c  get_next_line.c  get_next_line2.c  init.c  main.c  only_before.c  path.c  put_minimalist.c  set_var.c  setenv.c  setup.c  without_before_.c
src/alias/: alias.c
src/builtins/: cd.c  check_where.c  check_which.c  echo.c  env.c  exit.c  repeat.c  setenv.c  setenv_isValid.c  source.c  unsetenv.c  where.c  which.c
src/command/: command_validity.c  double_redir.c  end.c  error.c  file.c  lexer.c  manage.c  parser_and_or.c  pipe.c  redir.c  validity.c
src/edit_line/: basic_key.c  main.c  (+6 more)
(+12 files in other folders)
